<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <CheckedTextView
        android:id="@+id/checkedTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playerName" />

    <EditText
        android:id="@+id/textFieldName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp" >

        <requestFocus />
    </EditText>

    <CheckedTextView
        android:id="@+id/checkedTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speed" />

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_margin="25dp"/>

    <Button
        android:id="@+id/saveandreturn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saveandreturn" />

    <Button
        android:id="@+id/returnwithoutsaving"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/returnwithoutsaving"/>

</LinearLayout>